@@ -7,6 +7,7 @@ Version 3.4.0
 * add utility plotpcal
 * update pulse cal: Use new, more natural format for .difx/PCAL* files made by mpifxcorr
 * allow addition of history though external file (--history option)
+* add DELTAT keyword to ModelComps table.  Required for != 2 minute polynomial intervals
 
 Version 3.3.0
 * Improved clarity in generation of Flag, Tsys, Pcal, Gain and Weather tables: prioritized sources of data
